# LEDSmokeAnalysis

./: .buildinfo  .gitignore  01_find_search_areas.py  02_analyse_positions_man.py  03_analyse_photo.py  LICENSE.md  README.md  analysis.html  cli_documentation.html  config.html  data_extraction.html  demo.html  description.html  genindex.html  index.html  installation.html  led_helper.py  led_positions.html  ledsa.html  ledsa.py  ledsa_conf.py  log.html  objects.inv  postprocessing.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  test.py
.doctrees/: analysis.doctree  cli_documentation.doctree  config.doctree  data_extraction.doctree  demo.doctree  description.doctree  environment.pickle  index.doctree  installation.doctree  led_positions.doctree  ledsa.doctree  postprocessing.doctree
.github/workflows/: build_documentation.yaml  documentation.yaml  local.yml  publish_pypi.yml  python-publish-test.yml  run_robot_framework_tests.yml
_modules/: index.html
_sources/: cli_documentation.rst.txt  config.rst.txt  data_extraction.rst.txt  description.rst.txt  index.rst.txt  led_positions.rst.txt
_static/: tables.css
demo/: __main__.py  demo_setup.py
doc/: analysis.rst  conf.py  data_extraction.rst  description.rst  ledsa.rst  postprocessing.rst
docs/: analysis.rst  conf.py  demo.rst  index.rst  installation.rst  led_positions.rst  ledsa.analysis.rst  ledsa.core.rst  ledsa.ledpositions.rst  ledsa.rst  ledsa.tests.AcceptanceTests.rst  ledsa.tests.UnitTests.rst  ledsa.tests.rst  modules.rst  requirements.txt
examples/: LEDSA2FDS.ipynb  postprocessing.ipynb
helper_tools/: read_hdf.ipynb
ledsa/: LEDSA.py  README.md  __init__.py  __main__.py  ledsa.py  parser_arguments_declaration.py  parser_arguments_run.py
ledsa/GUI/: __main__.py  plot_functions.py  ui.py
ledsa/_tests/: log_analysis.py
ledsa/analysis/: AbsorptionCoefficients.py  ConfigDataAnalysis.py  Experiment.py  ExperimentData.py  ExtinctionCoefficients.py  ExtinctionCoefficientsAlgebraic.py  ExtinctionCoefficientsAnalytic.py  ExtinctionCoefficientsLinear.py  ExtinctionCoefficientsNonLinear.py  ExtinctionCoefficientsNumeric.py  _GUI.py  __main__.py  calculations.py  data_preparation.py  helper_functions_main.py  multi_camera.py  plot_functions.py  ui.py
ledsa/core/: ConfigData.py  ConfigDataAnalysis.py  LEDAnalysisData.py  __init__.py  _led_helper.py  _led_helper_functions.py  _led_helper_functions_s1.py  _led_helper_functions_s2.py  _led_helper_functions_s3.py  _times.py  analysis_data.py  file_handling.py  image_handling.py  image_reading.py  led_helper.py  ledsa_conf.py  model.py  parser_arguments_declaration.py  parser_arguments_run.py
ledsa/data_extraction/: DataExtractor.py  LEDAnalysisData.py  data_integrity.py  init_functions.py  led_helper.py  model.py  step_1_functions.py  step_2_functions.py  step_2_functions_legacy.py  step_3_functions.py
ledsa/demo/: demo_run.py  demo_setup.py  demon_run.py
ledsa/docs/: README.rst  conf.py  (+6 more)
(+107 files in other folders)
