[metadata]
name = ledsa
version = 0.0.1
author = Lukas Arnold
author_email = author@example.com
description = A scientific package to analyse smoke via the dimming of light sources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FireDynamics/LEDSmokeAnalysis
project_urls =
    Bug Tracker = https://github.com/FireDynamics/LEDSmokeAnalysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ledsa
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src